fix subscript in D_G^H defn, closes #70

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -283,7 +283,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
     \widehat{\mathbb H} \times (\G_a \otimes \Lie \widehat{\mathbb H}) & \xrightarrow{\cong} T_* \widehat{\mathbb H}, \\
     (x, \xi) & \mapsto x +_{\widehat{\mathbb H}} \eps \cdot \xi.
     \end{align*}
-    This gives rise to an invariant notion of differentiation: given two formal groups \(\G\), \(\widehat{\mathbb H}\) as well as any pointed map \(f\co \widehat{\mathbb H} \to \G\) of formal varieties, there is a function \[D_{\widehat{\mathbb H}}^{\G} f\co \widehat{\mathbb H} \to \G_a \otimes (\Lie \widehat{\mathbb H})^* \otimes \Lie \G\] characterized by \[T_* f(x +_{\widehat{\mathbb H}} \eps \cdot \xi) = f(x) +_{\widehat{\mathbb H}} \eps \cdot (D_{\G}^{\widehat{\mathbb H}} f)(x) \xi.\]
+    This gives rise to an invariant notion of differentiation: given two formal groups \(\G\), \(\widehat{\mathbb H}\) as well as any pointed map \(f\co \widehat{\mathbb H} \to \G\) of formal varieties, there is a function \[D_{\widehat{\mathbb H}}^{\G} f\co \widehat{\mathbb H} \to \G_a \otimes (\Lie \widehat{\mathbb H})^* \otimes \Lie \G\] characterized by \[T_* f(x +_{\widehat{\mathbb G}} \eps \cdot \xi) = f(x) +_{\widehat{\mathbb H}} \eps \cdot (D_{\G}^{\widehat{\mathbb H}} f)(x) \xi.\]
     \item By taking \(\G_a\) as a model for \(\A^1\), any curve \(\gamma\co \A^1 \to \G\) can be interpreted as a map of formal varieties \(\gamma\co \G_a \to \G\).  Applying the recipe above gives rise to a function \(\A^1 \to \G_a \otimes \Lie \G\), i.e., a series with coefficients in \(\Lie \G\).  This series can actually be given explicitly~\cite[V.7.3]{LazardCFGs}: \[\gamma \mapsto \sum_{n=1}^\infty t^{n-1} \Lie(F_n \gamma).\]  In particular, for \(\G = \G_a\), this computes the classical derivative of \(\gamma\) expanded in the canonical coordinate~\cite[V.7.13]{LazardCFGs}.
     \item This assignment is compatible with the Dieudonn\'e module structures on curves on \(\G\) and curves on \(\G_a \otimes \Lie \G\).  The inverse Dieudonn\'e functor then gives rise to a map \[\breve D_{\G}\co \G \to \G_a \otimes \Lie \G,\] called the \textit{reduced derivative}.  This construction is natural in \(\G\), so if \(\G\) had a logarithm, there would be a commuting square
     \begin{center}
