removing unpublished result

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -227,22 +227,22 @@ There is further hope that the analogy to special values of \(L\)--functions can
 
 
 
-\todo{Summarize this more briefly.}
-The program above is not the only way that homotopy theory appears to admit \(p\)--adic interpolation, as the following striking result of Yanovski demonstrates.  A \textit{generalized homotopy cardinality function} is a function \(\chi\), defined only on spaces generated under finite colimits by \(\pi\)--finite spaces and valued in rational numbers, which satisfies
-\begin{description}
-    \item[Homotopy invariance:] if \(A \simeq B\), then \(\chi(A) = \chi(B)\).
-    \item[Normalization:] \(\chi(*) = 1\).
-    \item[Additivity:] \(\chi(A \cup_C B) = \chi(A) + \chi(B) - \chi(C)\).
-    \item[Multiplicativity:] \(\chi(A \times B) = \chi(A) \cdot \chi(B)\).
-\end{description}
-There is a natural family of examples of such functions: at any prime \(p\), set \[\chi_{d,p}(X) = \dim K(d)^0(X) - \dim K(d)^1(X).\]  The special cases \(\chi_{0, p}\) and \(\chi_{\infty, p}\) recover the Euler characteristic in the cases where they converge, but this quickly gets fussy.  For instance, \(B\Z/p\) is a \(\pi\)--finite space but is cohomologically infinite dimensional---but its Euler characteristic is \textit{regularized} to give closed sums like \[\chi_{\infty, p}(B\Z/p) = 1 - (p-1) + (p-1)^2 - \cdots = \frac{1}{p}.\]  The finite-height versions are much better behaved: using the results of \Cref{CoopnsForMoravaKandHA}, we can quickly compute
-\begin{align*}
-\chi_{d,p}(B\Z/p) & = p^d, &
-\chi_{d,p}(\OS{H\Z/p}{m}) & = p^{\binom{d}{m}},
-\end{align*}
-without any handwaving about summation.
+% \todo{Summarize this more briefly.}
+% The program above is not the only way that homotopy theory appears to admit \(p\)--adic interpolation, as the following striking result of Yanovski demonstrates.  A \textit{generalized homotopy cardinality function} is a function \(\chi\), defined only on spaces generated under finite colimits by \(\pi\)--finite spaces and valued in rational numbers, which satisfies
+% \begin{description}
+%     \item[Homotopy invariance:] if \(A \simeq B\), then \(\chi(A) = \chi(B)\).
+%     \item[Normalization:] \(\chi(*) = 1\).
+%     \item[Additivity:] \(\chi(A \cup_C B) = \chi(A) + \chi(B) - \chi(C)\).
+%     \item[Multiplicativity:] \(\chi(A \times B) = \chi(A) \cdot \chi(B)\).
+% \end{description}
+% There is a natural family of examples of such functions: at any prime \(p\), set \[\chi_{d,p}(X) = \dim K(d)^0(X) - \dim K(d)^1(X).\]  The special cases \(\chi_{0, p}\) and \(\chi_{\infty, p}\) recover the Euler characteristic in the cases where they converge, but this quickly gets fussy.  For instance, \(B\Z/p\) is a \(\pi\)--finite space but is cohomologically infinite dimensional---but its Euler characteristic is \textit{regularized} to give closed sums like \[\chi_{\infty, p}(B\Z/p) = 1 - (p-1) + (p-1)^2 - \cdots = \frac{1}{p}.\]  The finite-height versions are much better behaved: using the results of \Cref{CoopnsForMoravaKandHA}, we can quickly compute
+% \begin{align*}
+% \chi_{d,p}(B\Z/p) & = p^d, &
+% \chi_{d,p}(\OS{H\Z/p}{m}) & = p^{\binom{d}{m}},
+% \end{align*}
+% without any handwaving about summation.
 
-In another direction, the function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0}\] was shown to be a homotopy cardinality function (on \(p\)--local \(\pi\)--finite spaces) by Baez and Dolan~\cite{BaezDolan}.  In the same toy setting as above, we compute \[|B\Z/p| = \frac{1}{p}.\]  It is quite a curiosity to get the same value as the regularized sum, and Baez and Dolan conjectured that whenever these formulas could be simultaneously made sense of, they would agree.  Yanovsky demonstrated this conjecture to be true: taking \(p > 2\), he showed that the function \(n \mapsto \chi_{n, p}(X)\) extends uniquely to a dyadic analytic function \(\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2\) and that the Baez--Dolan function appears as \(\widehat L_{X,p}(-1)\).  This justifies \(p\)--adic analytic continuation formulas relating the two invariants, such as \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
+% In another direction, the function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0}\] was shown to be a homotopy cardinality function (on \(p\)--local \(\pi\)--finite spaces) by Baez and Dolan~\cite{BaezDolan}.  In the same toy setting as above, we compute \[|B\Z/p| = \frac{1}{p}.\]  It is quite a curiosity to get the same value as the regularized sum, and Baez and Dolan conjectured that whenever these formulas could be simultaneously made sense of, they would agree.  Yanovsky demonstrated this conjecture to be true: taking \(p > 2\), he showed that the function \(n \mapsto \chi_{n, p}(X)\) extends uniquely to a dyadic analytic function \(\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2\) and that the Baez--Dolan function appears as \(\widehat L_{X,p}(-1)\).  This justifies \(p\)--adic analytic continuation formulas relating the two invariants, such as \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
 
 
 
