--- a/main.bib
+++ b/main.bib
@@ -830,6 +830,21 @@ MRREVIEWER = {John McCleary},
 MRREVIEWER = {J. F. Adams},
 }
 
+@inproceedings {BordismSplitting,
+    AUTHOR = {Boardman, J. M.},
+     TITLE = {Splitting of {$M{\rm U}$} and other spectra},
+ BOOKTITLE = {Geometric applications of homotopy theory ({P}roc. {C}onf.,
+              {E}vanston, {I}ll., 1977), {II}},
+    SERIES = {Lecture Notes in Math.},
+    VOLUME = {658},
+     PAGES = {27--79},
+ PUBLISHER = {Springer, Berlin},
+      YEAR = {1978},
+   MRCLASS = {55N20},
+  MRNUMBER = {513568},
+MRREVIEWER = {J. P. May},
+}
+
 @incollection {BJW,
     AUTHOR = {Boardman, J. Michael and Johnson, David Copeland and Wilson,
               W. Stephen},
