fix dumb geometry settings

--- a/preamble.tex
+++ b/preamble.tex
@@ -2,8 +2,8 @@
 
 % \usepackage{showframe}
 % turn these off if you ever resubmit to CUP
-\usepackage{geometry}
-\geometry{paperwidth=6in,paperheight=9in}
+% \usepackage{geometry}
+% \geometry{paperwidth=6in,paperheight=9in}
 
 
 %%% Created by texsupport 20/09/2017
