add example of norm-incoherent coordinate

--- a/finite.tex
+++ b/finite.tex
@@ -580,7 +580,7 @@ The height of a formal group law lies in \(\N \cup \{\infty\}\).
 A \(p\)--typical coordinate is guaranteed to satisfy the preconditions of \Cref{GoodParametersComputeHeight}, and \Cref{EveryFGLIsPTypical} guarantees such coordinates.
 \end{proof}
 
-In the course of the above discussion, manipulations with the \(\ell\)--series have played a critical role, and we have shied away from the \(p\)--series because of the noninvertibility of \(p\) in \(\Z_{(p)}\).  As a consequence, this means that the \(p\)--series contains an unusual amount of information even after \(p\)--typification of a coordiante, and so we turn to its analysis.
+In the course of the above discussion, manipulations with the \(\ell\)--series have played a critical role, and we have shied away from the \(p\)--series because of the noninvertibility of \(p\) in \(\Z_{(p)}\).  As a consequence, this means that the \(p\)--series contains an unusual amount of information even after \(p\)--typification of a coordinate, and so we turn to its analysis.
 
 \begin{lemma}[{\cite[Section 4]{Araki}}]\label{pTypLogGivesNicePSeries}\label{pTypLawsHaveNicePSeries}
 A formal group law \(+_\phi\) is \(p\)--typical if and only if there are elements \(v_d\) with \[[p]_\phi(x) = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_d x^{p^d} +_\phi \cdots.\]
