--- a/cooperations.tex
+++ b/cooperations.tex
@@ -390,7 +390,7 @@ S^n \arrow["\sigma"]{r} \arrow["F(\eps)_* \sigma"]{ru} \& F(\CP^\infty) \arrow["
 S^n \arrow["\sigma"]{r} \arrow["F(\eta)_* \sigma"']{rd} \& F(*) \arrow["F(\eta)"]{d} \arrow["F(\eta^* \omega)"]{rd} \\
 \& F(\CP^\infty) \arrow["F(\omega)"]{r} \& F(\OS{E}{m})
 \end{tikzcd}
-\right),
+\right).
 \end{align*}
 \caption{Four topological Kronecker pairing relations.}\label{KroneckerPairingFigure}
 \end{figure}
