add origination info for A.3-4

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -9,7 +9,7 @@ Thus ends our technical discussion of the interaction of algebraic geometry and 
 
 
 
-\section{Historical retrospective (Michael Hopkins)}
+\section[Historical retrospective]{Historical retrospective \\ by Michael Hopkins}
 
 \input{retrospective}
 
