--- a/foreword.tex
+++ b/foreword.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\subsection*{Foreword (Matthew Ando)}
+\subsection*{Foreword \\ by Matthew Ando}
 
 This book does a remarkable job of introducing some of the 
 interaction between algebraic topology and algebraic geometry, which
