--- a/cooperations.tex
+++ b/cooperations.tex
@@ -263,7 +263,7 @@ Tilman Bauer has studied some of the algebraic geometry associated to unstable c
 
 \section{Algebraic mixed unstable cooperations}\label{UnstableAlgebraicModelSection}
 
-For simplicity, we return to the stable setting of \Cref{StableContextLecture} for a moment.  For an arbitrary spectrum \(X\) and ring spectrum \(E\), the completion \(X^\wedge_E\) is typically a quite poor approximation to \(X\) itself.  Though this can be partially mediated by placing hypotheses on \(X\), the approximation can always be improved by ``enlarging'' the ring spectrum involved---for instance, selecting a second ring spectrum \(F\) and forming the completion \(X^\wedge_{E \vee F}\) at the wedge.  This has the following factorization property
+For simplicity, we return for a moment to the stable setting of \Cref{StableContextLecture}.  For an arbitrary spectrum \(X\) and ring spectrum \(E\), the completion \(X^\wedge_E\) is typically a quite poor approximation to \(X\) itself.  Though this can be partially mediated by placing hypotheses on \(X\), the approximation can always be improved by ``enlarging'' the ring spectrum involved---for instance, selecting a second ring spectrum \(F\) and forming the completion \(X^\wedge_{E \vee F}\) at the wedge.  This has the following factorization property
 \begin{center}
 \begin{tikzcd}[row sep=0.2em]
 & & X^\wedge_E \\
@@ -336,7 +336,7 @@ Imposing these additional relations, we call the resulting quotient Hopf ring th
 There is a natural map \[(F_0 \CP^\infty)_{F_0[E^0]}^{\circulatearrows}[E^0 \CP^\infty] \to F_0(\OS{E}{0}).\]
 \end{lemma}
 \begin{proof}
-For any space \(X\), we construct a \index{Kronecker pairing}Kronecker-type pairing \[\<-,-\>\co F_0 X \times E^0 X \to F_0(\OS{E}{0})\] as follows: given a class \(f \in \pi_0 F(X)\) and a class \(e\co X \to \OS{E}{0}\), we can compose the two to produce an element \(e_*(f) \in \pi_0 F(\OS{E}{0})\).\footnote{This map was considered by Goerss~\cite[Proposition 10.2]{GoerssDieudonne}, who cites Strickland as inspiration.}  This pairing is ``bilinear'' in the following senses:
+For any space \(X\), we construct a \index{Kronecker pairing}Kronecker-type pairing \[\<-,-\>\co F_0 X \times E^0 X \to F_0(\OS{E}{0})\] by composing a class \(f \in F_0(X)\) and a class \(e\co X \to \OS{E}{0}\) to produce an element \(e_*(f) \in F_0(\OS{E}{0})\).\footnote{This map was considered by Goerss~\cite[Proposition 10.2]{GoerssDieudonne}, who cites Strickland as inspiration.}  This pairing is ``bilinear'' in the following senses:
 \begin{align*}
 \<a' + a'', b\> & = \<a', b\> + \<a'', b\>, &
 \<f \cdot a, b\> & = f \cdot \<a, b\>, \\
