discrepancy spectrum chat, closes #100

--- a/powerops.tex
+++ b/powerops.tex
@@ -988,7 +988,7 @@ where \(C\) is a map making the triangle it belongs to commute.  This all gives 
 
 In order to show nonconstructively that the set of \(A\)s is nonempty, we might try to discern that \(\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p]\) is zero by investigating the mapping set \([\spin, \gl_1 KO_p]\) itself.  We proceed by a sequence of quite improbable steps, beginning with the following Theorem original to Ando--Hopkins--Rezk:
 \begin{theorem}[{\cite[Theorem 4.11]{AHR}}]\label{DiscrepancyDefinition}
-Let \(R\) be a \(E(d)\)--local \(E_\infty\)--ring spectrum, and set \(F\) to be the fiber \[F \to \gl_1 R \to L_d \gl_1 R,\] known as the \index{discrepency spectrum}\textit{discrepency spectrum}.  Then \(\pi_* F\) is torsion and \(F\) satisfies the coconnectivity condition \(F \simeq F(-\infty, d]\). \qed
+Let \(R\) be a \(E(d)\)--local \(E_\infty\)--ring spectrum, and set \(F_R\) to be the fiber \[F_R \to \gl_1 R \to L_d \gl_1 R,\] known as the \index{discrepency spectrum}\textit{discrepency spectrum}.  Then \(\pi_* F_R\) is torsion and \(F_R\) satisfies the coconnectivity condition \(F_R \simeq F_R(-\infty, d]\). \qed
 \end{theorem}
 
 \noindent It follows that \(\gl_1 KO_p \to L_1 \gl_1 KO_p\) is a \(1\)--connected map, and hence \[[\spin, \gl_1 KO_p] = [\spin, L_1 \gl_1 KO_p].\]  In fact, we can even pass to the \(K(1)\)--localization, if we pause to introduce Rezk's \index{Rezk logarithm}logarithmic cohomology operation.
@@ -1033,11 +1033,11 @@ We specialize the above square to \(R = KO_p\):
 \begin{tikzcd}
 & & & KO_p \arrow{dd} \\
 L_1 \gl_1 KO_p \arrow{rr} \arrow{dd} \arrow[rrdd, phantom, "\lrcorner", very near start] & & \widehat L_1 \gl_1 KO_p \arrow{ru}[description]{\ell_1} \\
-& L_0 KO_p[4, \infty) \arrow{rr} & & L_0 KO_p \\
-L_0 \gl_1 KO_p \arrow{rr} \arrow{ru}[description]{\ell_0} & & L_0 \widehat L_1 \gl_1 KO_p. \arrow{ru}[description]{\ell_1} \arrow[crossing over, leftarrow]{uu}
+& L_0 KO_p \arrow{rr}[pos=0.25]{\text{``}\ell_0^{-1} L_0 \ell_1\text{''}} & & L_0 KO_p \\
+L_0 \gl_1 KO_p \arrow{rr} \arrow{ru}[description]{\ell_0} & & L_0 \widehat L_1 \gl_1 KO_p. \arrow{ru}[description]{L_0 \ell_1} \arrow[crossing over, leftarrow]{uu}
 \end{tikzcd}
 \end{center}
-The behavior of the back horizontal map is determined by Rezk's formula for the logarithm.  It acts by some nonzero number in every positive degree, hence the fiber has the form \(\prod_{k=-\infty}^0 \Susp^{4k-1} H\Q\).  Since the front face is a fiber square, this is also a calculation of the fiber of the map in the Lemma statement.\footnote{As a corollary of this same method, the Rezk logarithm for \(R = KU^\wedge_p\) gives an equivalence \(\gl_1 KU^\wedge_p[3, \infty) \to KU^\wedge_p[3, \infty)\).  This was previously known by nonconstructive methods to Adams and Priddy~\cite[Corollary 1.4]{AdamsPriddy}.}
+The behavior of the back horizontal map is determined by Rezk's formula for the logarithm.  It acts by some nonzero number in every positive degree, hence the fiber has the form \(\prod_{k=-\infty}^{-1} \Susp^{4k-1} H\Q\).  Since the front face is a fiber square, this is also a calculation of the fiber of the map in the Lemma statement.\footnote{As a corollary of this same method, the Rezk logarithm for \(R = KU^\wedge_p\) gives an equivalence \(\gl_1 KU^\wedge_p[3, \infty) \to KU^\wedge_p[3, \infty)\).  This was previously known by nonconstructive methods to Adams and Priddy~\cite[Corollary 1.4]{AdamsPriddy}.  Interestingly, while \(\gl_1 KU\) is known to split as \(HC_2 \times \gl_1 KU[2, \infty)\), the nontrivial action of \(\pi_0 \ell_1\) shows that \(\gl_1 KU^\wedge_p\) admits no such splitting.}\footnote{The same calculation for \(KU^\wedge_p\) has an additional wrinkle: \(\pi_2 \ell_1\) acts by zero.  The patterns in \(\pi_* L_1 \gl_1 KU_p\) thus become: in degrees below \(-1\), the even homotopy vanishes and each odd degree has a \(\Q_p / \Z_p\), because the vertical fracture map alone causes acyclicitization; in degrees above \(2\), the odd degrees vanish and each even degree has a \(\Z_p\), as the horizontal logarithm is an isomorphism and the vertical rationalization injects; and in the remaining critical range, the homotopy groups are \(\pi_* L_1 \gl_1 KU_p[-1, 2] = (0, \Z_p, \Q_p / \Z_p, \Q_p)\), where the last two groups would participate in an extension with \(\Z_p\) if not for the vanishing logarithm.  If we work instead with \(E(\G_m / \overline{\F_p}) = KU[\zeta_n : n \nmid p]^\wedge_p\), then the Frobenius acts nontrivially, \(\pi_2 \ell_1\) does not vanish, the critical range becomes \((0, \W(\overline{\F_p}), 0, \W(\overline{\F_p}) \oplus_{\Z_p} \Q_p)\), and finally \(F_{\G_m / \overline{\F_p}}[0, 1] \simeq \Susp H\Q_p/\Z_p\).  Hopkins and Lurie conjectured in general that \(F_{\Gamma_n / \overline{k}}[0, \infty) \simeq \Susp^n \mathbb I_{\Q_p/\Z_p}[0, n]\), and this was proven by Barthel, Carmeli, Schlank, and Yuan~\cite[Theorem E]{BCSY}.}
 \end{proof}
 
 As a consequence, we have identifications \[\gl_1 \eta_{KO_p} \circ j \in [\spin, \gl_1 KO_p] \cong [\spin, L_1 \gl_1 KO_p] \cong [\spin, \widehat L_1 \gl_1 KO_p].\]  A direct application of the Rezk logarithm replaces \(\widehat L_1 \gl_1 KO_p\) with \(KO_p\), and the \(K(1)\)--localization of \(\spin\) recovers \(\Susp^{-1} KO_p\).  Altogether, this identifies \[\spin \xrightarrow{j} \gl_1 \S \xrightarrow{\gl_1 \eta_{KO_p}} \gl_1 KO_p\] with a point in the mapping set \([\Susp^{-1} KO_p, KO_p]\)---and we mark this as a point where we would like to understand the space of \(KO_p\)--operations.
