--- a/preface.tex
+++ b/preface.tex
@@ -57,7 +57,7 @@ Thanks to my many friends here, and thanks also to Thomas Dunning especially.  T
 
 \subsection*{Changes since publication}
 
-It has now been some years since the publication of this text, and it has been very gratifying to see the uptick in readers' interest in this subject.  Of course, increased interest also brings with it corrections and addenda.  I would particularly like to thank Jonathan Beardsley, Hood Chatham, Jeremy Hahn, Yigal Kamel, Kiran Luecke, Jeroen van der Meer, Piotr Pstr\k{a}gowski, Charles Rezk, Bruno Stonek, Paul VanKoughnett and Allen Yuan for their insightful questions and contributions to the continued health of this document.  While most of the changes have been minor, the major differences from the published version are:
+It has now been some years since the publication of this text, and it has been very gratifying to see the uptick in readers' interest in this subject.  Of course, increased interest also brings with it corrections and addenda.  I would particularly like to thank Jonathan Beardsley, Robert Burklund, Shachar Carmeli, Jeremy Hahn, Yigal Kamel, Kiran Luecke, Jeroen van der Meer, Piotr Pstr\k{a}gowski, Charles Rezk, John Rognes, Bruno Stonek, Paul VanKoughnett and Allen Yuan for their insightful questions and contributions to the continued health of this document.  While most of the changes have been minor, the major differences from the published version are:
 
 \begin{itemize}
     \item There were a pair of mutually cancelling errors in \Cref{StabilizingTheMUSteenrodOps}: the calculation leading up to \Cref{AjAndBjAreInTheFGLSubring} mistook the permutation representation for the reduced permutation representation, and so was missing a factor of \(x\); and \Cref{PCnOnUniversalMUClasses} was argued incorrectly, which hid this previous error.  These have both now been corrected.
