--- a/main.bib
+++ b/main.bib
@@ -512,6 +512,15 @@ MRREVIEWER = {Amnon Neeman},
   note = {\url{http://people.mpim-bonn.mpg.de/tbarthel/CC.pdf}, Accessed: 2016-10-26}
 }
 
+@misc{BCSY,
+      title={The Chromatic Fourier Transform}, 
+      author={Tobias Barthel and Shachar Carmeli and Tomer M. Schlank and Lior Yanovski},
+      year={2022},
+      eprint={2210.12822},
+      archivePrefix={arXiv},
+      primaryClass={math.AT}
+}
+
 @article{BarthelFrankland,
 author = "Barthel, Tobias and Frankland, Martin",
 doi = "10.2140/agt.2015.15.2065",
