--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1083,7 +1083,7 @@ H_k B(n) & = D_n H_* K(\F_p, n-k) \\
 \end{align*}
 \end{proof}
 
-Lastly, for a \emph{space} \(X\), we definitionally have that have \(H_* X\) forms an unstable module over the Steenrod algebra, i.e., \(\Loops^\infty H_* X = H_* X\).  This has the following direct sequence (with minor fuss at the bad indices \(n \equiv \pm 1 \pmod p\)):
+Lastly, for a \emph{space} \(X\), we definitionally have that have \(H_* X\) forms an unstable module over the Steenrod algebra, i.e., \(\Loops^\infty H_* X = H_* X\).  This has the following direct consequence (with minor fuss at the bad indices \(n \equiv \pm 1 \pmod p\)):
 
 \begin{corollary}[{\cite[Lemma 3.3]{GLM}}]
 For \(X\) a space, there is a natural surjection \(B(n)_n X \to H_n X\). \qed
