--- a/sigma.tex
+++ b/sigma.tex
@@ -1496,7 +1496,7 @@ Using the Serre spectral sequence calculation in the proof of \Cref{SpinSUCompar
 From here, the work gets considerably more technical.  In particular, we will only be able to conclude flatness in the case \(\height \G \le 2\), and then only through explicit calculation.  The results cleave into the following three pieces:
 
 \begin{lemma}[Nonexistence lemma]\label{SigmaNonexistenceLemma}
-Let \(\G\) be a formal group of height \(1\) or \(2\) over an \(\F_2\)--algebra.  For \(f \in \Sigma^2(\G; \Gm)\) of the form \(1 + a c_n + \cdots\), the following hold:
+Let \(\G\) be a formal group of height \(d \in \{1, 2\}\) over an \(\F_2\)--algebra.  For \(f \in \Sigma^2(\G; \Gm)\) of the form \(1 + a c_n + \cdots\), the following hold:
 \begin{enumerate}
     \item If \(n = 2^m\) then \(a = 0\).
     \item If \(n > 3\), \(n\) is odd, and \(n \ne 2^m - (2^d - 1)\), then \(a = 0\).
