--- a/sigma.tex
+++ b/sigma.tex
@@ -1527,7 +1527,7 @@ This is also a consequence of the same manipulation of the negation series.
 \end{proof}
 
 \begin{lemma}[Special existence lemma]\label{SigmaSpecialCaseLemma}
-For \(r \ge 0\) and \(d \ge 1\), there exists a function \(f \in C^2(\G; \Gm)\) with \(\lambda_2 f = 1 + (a^2 + \eps a + \delta) c_{2^r + (2^d - 1)}\).
+For \(r \ge 0\) and \(d \ge 1\), there exists a function \(f \in C^2(\G; \Gm)\) with \(\lambda_2 f = 1 + (a^2 + \eps a + \delta) c_{2^r + (2^d - 1)} + \cdots\).
 \end{lemma}
 \begin{proof}[Indication of proof]
 This, finally, makes explicit use of height \(1\) and \(2\) formal group laws.  The starting point is to set \(g = \delta_{(\G_a, \Gm)}E_2(ax^{2^{r-1} + (2^d-1)})\) and then to carefully cancel low-order terms by multiplying in other known \(\Sigma^2\)--structures.
