--- a/sigma.tex
+++ b/sigma.tex
@@ -1623,7 +1623,7 @@ More generally, the \(\sigma\)--orientation associated to a elliptic spectrum wh
 \end{remark}
 
 \begin{remark}[{\cite{KLW,StricklandFSKS}}]
-The cohomology formal schemes of a number of other infinite loopspaces related to real \(K\)--theory admit reasonable descriptions, often even independent of height.  A routinely useful result in this arena is due to Yagita~\cite[Lemma 2.1]{Yagita}: for \(k_\Gamma\) the connective cover of the Morava \(K\)--theory \(K_\Gamma\), in the Atiyah--Hirzebruch spectral sequence \[E_2^{*, *} = Hk^* X \otimes_k k_\Gamma^* \Rightarrow k_\Gamma^* X,\] the differentials are given by \[d_r(x) = \begin{cases} 0 & \text{if \(r \le 2(p^d - 1)\)}, \\ \lambda Q_d x \otimes v_d & \text{if \(r = 2(p^d - 1) + 1\)} \end{cases}\] where \(\lambda \ne 0\) and \(Q_d\) is the \index{Milnor primitive}\(d\){\th} Milnor primitive.  For instance, this shows that \(K_* BO\) decomposes as \[K_* BO \cong K_*[b_2, b_4, b_{2^{d+1}-2}] \underset{K_*[b_{2j}^2 \mid j < 2^d]}{\otimes} K_*[b_{2j}^2].\]  This, coupled to a theorem governing the result of the double bar spectral sequence, powers most of the results of Kitchloo, Laures, and Wilson~\cite[Section 4]{KLW}.  Their stronger results on the connective covers of \(BO \times \Z\) are summarized in \Cref{MoravaKthyOfBO}.  The remaining formal scheme \(B\String_K\), our prized object, is harder to access by these means: the sequence \[(\OS{HS^1}{2})_K \to B\String_K \to B\Spin_K\] is exact in the middle, but neither left- nor right-exact~\cite[pg.\ 234]{KLW}, causing significant headache.  Satisfyingly, their methods also tell us that our alternative analysis fails at higher heights: the formal scheme \(\Spin/\SU_K\) contains \(\coprod_{j \ge 3} (\OS{HS^1[2]}{j})_K\) as a subscheme, and it accounts for the kernel of the map to \(B\Spin_K\).  Once \(\height \Gamma \ge 3\) is satisfied, this kernel is nonzero.
+The cohomology formal schemes of a number of other infinite loopspaces related to real \(K\)--theory admit reasonable descriptions, often even independent of height.  A routinely useful result in this arena is due to Yagita~\cite[Lemma 2.1]{Yagita}: for \(k_\Gamma\) the connective cover of the Morava \(K\)--theory \(K_\Gamma\), in the Atiyah--Hirzebruch spectral sequence \[E_2^{*, *} = Hk^* X \otimes_k k_\Gamma^* \Rightarrow k_\Gamma^* X,\] the differentials are given by \[d_r(x) = \begin{cases} 0 & \text{if \(r \le 2(p^d - 1)\)}, \\ \lambda Q_d x \otimes v_d & \text{if \(r = 2(p^d - 1) + 1\)} \end{cases}\] where \(\lambda \ne 0\) and \(Q_d\) is the \index{Milnor primitive}\(d\){\th} Milnor primitive.  For instance, this shows that \(K_* BO\) decomposes as \[K_* BO \cong K_*[b_2, b_4, b_{2^{d+1}-2}] \underset{K_*[b_{2j}^2 \mid j < 2^d]}{\otimes} K_*[b_{2j}^2].\]  This, coupled to a theorem governing the result of the double bar spectral sequence, powers most of the results of Kitchloo, Laures, and Wilson~\cite[Section 4]{KLW}.  Their results on the connective covers of \(BO \times \Z\) were translated by Strickland~\cite{StricklandFSKS}, summarized here in \Cref{MoravaKthyOfBO}.  The remaining formal scheme \(B\String_K\), our prized object, is harder to access by these means: the sequence \[(\OS{HS^1}{2})_K \to B\String_K \to B\Spin_K\] is exact in the middle, but neither left- nor right-exact~\cite[pg.\ 234]{KLW}, causing significant headache.  Satisfyingly, their methods also tell us that our alternative analysis fails at higher heights: the formal scheme \(\Spin/\SU_K\) contains \(\coprod_{j \ge 3} (\OS{HS^1[2]}{j})_K\) as a subscheme, and it accounts for the kernel of the map to \(B\Spin_K\).  Once \(\height \Gamma \ge 3\) is satisfied, this kernel is nonzero.
 \end{remark}
 
 \begin{figure}
