--- a/sigma.tex
+++ b/sigma.tex
@@ -825,7 +825,7 @@ which we have shown to be exact at all the indicated nodes.  (The exactness of t
 The map \(\hat \Pi_3\) is an isomorphism: \[\hat \Pi_3\co \Spec H_* BU[6, \infty) \xrightarrow{\cong} C^3(\G_a; \Gm).\]
 \end{corollary}
 \begin{proof}[Proof sketch]
-We don't actually have to compute much about the middle map.  Because the squares in the map of sequences commute and the sequences themselves are exact as indicated, we at least learn that \(\hat \Pi_3\) is an epimorphism on group schemes, hence a monomorphism on rings of functions.  But, since both source and target are affine schemes of graded finite type with equal \index{Poincar\'e series}Poincar\'e series in each case, this monomorphism is an isomorphism.
+We don't actually have to compute much about the middle map.  Because the squares in the map of sequences commute and the sequences themselves are exact as indicated, we at least learn that \(\hat \Pi_3\) is an epimorphism on group schemes, hence a monomorphism on rings of functions.  But, since both source and target are affine schemes of graded finite type with equal \index{Poincar\'e series}Poincar\'e series over \(\Q\) and over each \(\F_p\), this monomorphism is an isomorphism.
 \end{proof}
 
 \begin{corollary}[{\cite[Theorem 2.31]{AHSTheoremOfTheCube}}]\label{Pi3ForCplxOrientableE}
