--- a/cooperations.tex
+++ b/cooperations.tex
@@ -46,7 +46,7 @@ In this Lecture, our goal is to codify the study of unstable cooperations, begin
 \CatOf{Spaces} \arrow[shift left=0.4em]{r}{\Susp^\infty} & \CatOf{Spectra} \arrow[equal]{r}\arrow[shift left=0.4em]{l}{\Loops^\infty} & \CatOf{Modules}_{\S} \arrow[shift left=0.4em]{r}{- \sm E} & \CatOf{Modules}_E \arrow[shift left=0.4em, "\mathrm{forget}"]{l} .
 \end{tikzcd}
 \end{center}
-We will write \(E(-)\) for the induced monad on \(\CatOf{Spaces}\), given by the formula \[E(X) = \Loops^\infty (E \sm \Susp^\infty X) = \colim_{q \to \infty} \Loops^j (\OS{E}{q} \sm X),\] where \(\OS{E}{*}\) are the constituent spaces in the \(\Omega\)--spectrum of \(E\).  This space has the property \(\pi_* E(X) = \widetilde E_{* \ge 0} X\).  The monadic structure comes from the two evident natural transformations:
+We will write \(E(-)\) for the induced monad on \(\CatOf{Spaces}\), given by the formula \[E(X) = \Loops^\infty (E \sm \Susp^\infty X) = \colim_{q \to \infty} \Loops^q (\OS{E}{q} \sm X),\] where \(\OS{E}{*}\) are the constituent spaces in the \(\Omega\)--spectrum of \(E\).  This space has the property \(\pi_* E(X) = \widetilde E_{* \ge 0} X\).  The monadic structure comes from the two evident natural transformations:
 \[\eta\co X \to \Loops^\infty \Susp^\infty X \simeq \Loops^\infty (\S \sm \Susp^\infty X) \to \Loops^\infty (E \sm \Susp^\infty X) = E(X),\] \vspace{-1.6\baselineskip}
 \begin{align*}
 \mu\co E(E(X)) & = \Loops^\infty(E \sm \Susp^\infty\Loops^\infty(E \sm \Susp^\infty X)) \\
