--- a/main.bib
+++ b/main.bib
@@ -194,22 +194,21 @@ MRREVIEWER = {P. S. Landweber},
 @article {ABGHR,
     AUTHOR = {Ando, Matthew and Blumberg, Andrew J. and Gepner, David and
               Hopkins, Michael J. and Rezk, Charles},
-     TITLE = {An {$\infty$}-categorical approach to {$R$}-line bundles,
-              {$R$}-module {T}hom spectra, and twisted {$R$}-homology},
+     TITLE = {Units of ring spectra, orientations and {T}hom spectra via
+              rigid infinite loop space theory},
    JOURNAL = {J. Topol.},
   FJOURNAL = {Journal of Topology},
     VOLUME = {7},
       YEAR = {2014},
-    NUMBER = {3},
-     PAGES = {869--893},
+    NUMBER = {4},
+     PAGES = {1077--1117},
       ISSN = {1753-8416},
-   MRCLASS = {55P43 (55N20 55U40)},
-  MRNUMBER = {3252967},
-MRREVIEWER = {Tyler D. Lawson},
-       DOI = {10.1112/jtopol/jtt035},
-       URL = {http://dx.doi.org/10.1112/jtopol/jtt035},
+   MRCLASS = {55P43 (55N34 55R65)},
+  MRNUMBER = {3286898},
+MRREVIEWER = {Steven R. Costenoble},
+       DOI = {10.1112/jtopol/jtu009},
+       URL = {https://doi.org/10.1112/jtopol/jtu009},
 }
-
 
 @article {AFG,
     AUTHOR = {Ando, Matthew and French, Christopher P. and Ganter, Nora},
